[package]
name = "espresso-macros"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version="2.0", features=["full", "extra-traits"] }

[dev-dependencies]
arbitrary = { version="1.0", features=["derive"] }
ark-serialize = { version = "0.4.2", features = ["derive"] }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
